apps/base/minecraft/ftb-evolution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftb-evolution
  namespace: minecraft
  annotations:
    metallb.io/loadBalancerIPs: 192.168.1.201
    external-dns.alpha.kubernetes.io/hostname: ftb.mellor.dev
    external-dns.alpha.kubernetes.io/target: direct.mellor.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  type: LoadBalancer
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
      name: minecraft
  selector:
    app: ftb-evolution
